# halo2-rsa

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json
.cargo/: config.toml
benches/: bench.rs  verify_pkcs1v15_1024.rs  verify_rsa_signature.rs
examples/: rsa_example.rs
src/: chip.rs  gen_srs.rs  instructions.rs  lib.rs  macros.rs  rsa_signature.rs  wasm.rs
src/big_int/: chip.rs  instructions.rs  mod.rs  utils.rs
src/big_integer/: chip.rs  instructions.rs  mod.rs  utils.rs
src/big_uint/: chip.rs  instructions.rs  mod.rs  utils.rs
src/pow_integer/: chip.rs  instructions.rs  mod.rs
web-client/: README.md  package-lock.json  package.json
web-client/src/: App.tsx  bench-worker.ts  halo-worker.ts  rsa-worker.ts
