[package]
name = "halo2-rsa"
version = "0.1.0"
edition = "2021"
authors = ["Sora Suegami"]
description = "RSA verification circuit in halo2."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", version = "0.1.0", rev = "63bde545d934e69c806ef9bc8b18f03f6ec0fe8e" }
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", version = "0.1.0", rev = "63bde545d934e69c806ef9bc8b18f03f6ec0fe8e" }
halo2-dynamic-sha256 = { git = "https://github.com/SoraSuegami/halo2-dynamic-sha256.git", version = "0.1.0" }
num-bigint = { version = "0.4", features = ["rand"] }
#zkevm-circuits = { git = "https://github.com/SoraSuegami/zkevm-circuits.git", version = "0.1.0" }
#eth-types = { git = "https://github.com/SoraSuegami/zkevm-circuits.git", version = "0.1.0" }
sha2 = "0.10.6"

[dev-dependencies]
rand = "0.8.5"
rsa = "0.6.1"
criterion = "0.4"

[[bench]]
name = "verify_pkcs1v15_1024"
harness = false
